--- a/public/members.html
+++ b/public/members.html
@@ -6,14 +6,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="./stylesheets/styles.css" rel="stylesheet">
+  <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/logout"> 
+      <a class="navbar-brand" href="/logout">
         Logout
       </a>
     </div>
@@ -28,7 +28,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./js/admin.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
 
 </body>
 
