--- a/public/home.html
+++ b/public/home.html
@@ -47,9 +47,27 @@
 
     </nav>
 
-    <div class="container">
+
+    <div class="clearfix">
+        <div id="carouselExample1" class="carousel slide z-depth-1-half" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid" src="testing3.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="testing4.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="testing1.jpeg" alt="Third slide">
+                </div>
+            </div>
+
+        </div>
+
 
     </div>
+
+
     <script type="text/javascript">
     </script>
 </body>
