--- a/public/home.html
+++ b/public/home.html
@@ -40,7 +40,7 @@
             </ul>
             <ul class="nav navbar-nav ml-auto login">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><span class="fa fa-sign-in"></span> Login</a>
+                    <a class="nav-link" href="login.html"><span class="fa fa-sign-in"></span> Login</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +48,8 @@
     </nav>
 
 
-    <div class="clearfix">
+    <div class="clearfix carouselImages">
+
         <div id="carouselExample1" class="carousel slide z-depth-1-half" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -61,6 +62,8 @@
                     <img class="d-block img-fluid" src="testing1.jpeg" alt="Third slide">
                 </div>
             </div>
+
+
 
         </div>
 
