Added state html's with placeholder content

--- a/public/home.html
+++ b/public/home.html
@@ -40,7 +40,7 @@
             </ul>
             <ul class="nav navbar-nav ml-auto login">
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html"><span class="fa fa-sign-in"></span> Login</a>
+                    <a class="nav-link" href="login.html"><span class="fa fa-sign-in"></span> Admin Login</a>
                 </li>
             </ul>
         </div>
@@ -62,12 +62,11 @@
                     <img class="d-block img-fluid" src="testing1.jpeg" alt="Third slide">
                 </div>
             </div>
-
-
-
         </div>
+    </div>
 
-
+    <div class="container">
+        <p>hello</p>
     </div>
 
 
