edited the submissions.html

--- a/public/home.html
+++ b/public/home.html
@@ -65,8 +65,13 @@
         </div>
     </div>
 
-    <div class="container">
-        <p>hello</p>
+    <div class="container steps">
+        <h2>Find a COVID-19 Testing Site in 3 Easy Steps</h2>
+        <div class="container">
+            <i class="fa fa-flag faSteps"></i>
+            <i class="fa fa-flag faSteps"></i>
+            <i class="fa fa-flag faSteps"></i>
+        </div>
     </div>
 
 
