--- a/public/ny.html
+++ b/public/ny.html
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse links" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span><span class="fa fa-home"></span></a>
+                    <a class="nav-link" href="home.html">HOME <span class="sr-only">(current)</span><span class="fa fa-home"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SUBMIT A TESTING SITE  <span class="fa fa-map-marker"></span> </a>
+                    <a class="nav-link" href="submissions.html">SUBMIT A TESTING SITE  <span class="fa fa-map-marker"></span> </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ONLINE ASSESSMENT  <span class="fa fa-list"></span></a>
+                    <a class="nav-link" href="assessment.html">ONLINE ASSESSMENT  <span class="fa fa-list"></span></a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto login">
@@ -46,7 +46,6 @@
         </div>
 
     </nav>
-
 
 
     <div class="container">
