--- a/public/submissions.html
+++ b/public/submissions.html
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse links" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span><span class="fa fa-home"></span></a>
+                    <a class="nav-link" href="home.html">HOME <span class="sr-only">(current)</span><span class="fa fa-home"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SUBMIT A TESTING SITE  <span class="fa fa-map-marker"></span> </a>
+                    <a class="nav-link" href="submissions.html">SUBMIT A TESTING SITE  <span class="fa fa-map-marker"></span> </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ONLINE ASSESSMENT  <span class="fa fa-list"></span></a>
+                    <a class="nav-link" href="assessment.html">ONLINE ASSESSMENT  <span class="fa fa-list"></span></a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto login">
@@ -47,14 +47,12 @@
 
     </nav>
 
-
-
     <div class="container submissionForm">
         <div style="background:transparent !important" class="jumbotron" id="jumboPadding">
             <div style="background:transparent !important" class="jumbotron">
-                <div class="content-section-heading text-center">
+                <div class="content-section-heading ">
                     <div class="container">
-                        <h2 class="mb-5">Submit a Testing Location</h2>
+                        <h2 class="mb-5">Submit a Testing Site</h2>
                     </div>
                     <form id="contact-form" method="post" action="contact.php" role="form">
                         <div class="messages"></div>
@@ -64,14 +62,14 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="form_name">City *</label>
-                                            <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your first name" required="required" data-error="Firstname is required.">
+                                            <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter the state" required="required" data-error="Firstname is required.">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="form_lastname">State *</label>
-                                            <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your last name" required="required" data-error="Lastname is required.">
+                                            <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter the city" required="required" data-error="Lastname is required.">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
@@ -80,7 +78,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="form_email">Address *</label>
-                                            <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email" required="required" data-error="Valid email is required.">
+                                            <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter the address" required="required" data-error="Valid email is required.">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
