--- a/public/nj.html
+++ b/public/nj.html
@@ -34,9 +34,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">SUBMIT A TESTING SITE  <span class="fa fa-map-marker"></span> </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">ONLINE ASSESSMENT  <span class="fa fa-list"></span></a>
-                </li>
             </ul>
             <ul class="nav navbar-nav ml-auto login">
                 <li class="nav-item">
@@ -50,12 +47,12 @@
 
 
     <div class="container">
-        <p>placeholder</p>
+        <p><span class="testingLocations"></span></p>
     </div>
 
 
-    <script type="text/javascript">
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/nj.js"></script>
 </body>
 
 </html>
