--- a/public/submissions.html
+++ b/public/submissions.html
@@ -34,9 +34,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="submissions.html">SUBMIT A TESTING SITE  <span class="fa fa-map-marker"></span> </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="assessment.html">ONLINE ASSESSMENT  <span class="fa fa-list"></span></a>
-                </li>
             </ul>
             <ul class="nav navbar-nav ml-auto login">
                 <li class="nav-item">
@@ -48,68 +45,80 @@
     </nav>
 
     <div class="container submissionForm">
-        <div style="background:transparent !important" class="jumbotron" id="jumboPadding">
-            <div style="background:transparent !important" class="jumbotron">
-                <div class="content-section-heading ">
-                    <div class="container">
-                        <h2 class="mb-5">Submit a Testing Site</h2>
-                    </div>
-                    <form id="contact-form" method="post" action="contact.php" role="form">
-                        <div class="messages"></div>
-                        <div class="container" id="contact">
-                            <div class="controls">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="form_name">City *</label>
-                                            <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter the state" required="required" data-error="Firstname is required.">
-                                            <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="form_lastname">State *</label>
-                                            <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter the city" required="required" data-error="Lastname is required.">
-                                            <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group">
-                                            <label for="form_email">Address *</label>
-                                            <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter the address" required="required" data-error="Valid email is required.">
-                                            <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group">
-                                            <label for="form_message">Message *</label>
-                                            <textarea id="form_message" name="message" class="form-control" placeholder="Type your message" rows="4" required="required" data-error="Please,leave us a message."></textarea>
-                                            <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <input type="submit" class="btn btn-success btn-send" value="Send message">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <p class="text-muted"><strong>*</strong> All fields are required. </p>
-                                    </div>
+
+        <div class="content-section-heading ">
+            <div class="container">
+                <h1 class="mb-5">Submit a Testing Site</h1>
+            </div>
+            <form id="contact-form" method="post" action="contact.php" role="form">
+                <div class="messages"></div>
+                <div class="container" id="contact">
+                    <div class="controls">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_name">Testing Site *</label>
+                                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter the name of the location" required="required" data-error="Firstname is required.">
+                                    <div class="help-block with-errors"></div>
                                 </div>
                             </div>
-                    </form>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_lastname">State *</label>
+                                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter the state" required="required" data-error="Lastname is required.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="row">
+                            <input type="hidden" name="country" id="countryId" value="US" />
+                            <select name="state" class="states order-alpha" id="stateId">
+                                <option value="">Select State</option>
+                            </select>
+                            <select name="city" class="cities order-alpha" id="cityId">
+                                <option value="">Select City</option>
+                            </select>
+                        </div>
+
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="form_email">Address *</label>
+                                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter the address" required="required" data-error="Valid email is required.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="form_message">Message *</label>
+                                    <textarea id="form_message" name="message" class="form-control" placeholder="Type your message" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <input type="submit" class="btn btn-success btn-send" value="Submit">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="text-muted"><strong>*</strong> All fields are required. </p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+            </form>
             </div>
         </div>
 
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="//geodata.solutions/includes/statecity.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="js/submissions.js"></script>
 
-        <script type="text/javascript">
-        </script>
 </body>
 
 </html>
