--- a/public/submissions.html
+++ b/public/submissions.html
@@ -46,73 +46,72 @@
 
     <div class="container submissionForm">
 
-        <div class="content-section-heading ">
-            <div class="container">
-                <h1 class="mb-5">Submit a Testing Site</h1>
+
+        <h1 class="mb-5">Submit a Testing Site</h1>
+        <form>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label>Location Name</label>
+                    <input class="form-control" placeholder="Please enter the name of the testing facility">
+                </div>
+
+                <div class="form-group col-md-6">
+                    <label for="example-tel-input">Telephone</label>
+                    <input class="form-control" type="tel" value="1-(555)-555-5555" id="example-tel-input">
+                </div>
             </div>
-            <form id="contact-form" method="post" action="contact.php" role="form">
-                <div class="messages"></div>
-                <div class="container" id="contact">
-                    <div class="controls">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="form_name">Testing Site *</label>
-                                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter the name of the location" required="required" data-error="Firstname is required.">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="form_lastname">State *</label>
-                                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter the state" required="required" data-error="Lastname is required.">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                        </div>
 
+            <div class="form-group">
+                <label for="inputAddress">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            </div>
 
-                        <div class="row">
-                            <input type="hidden" name="country" id="countryId" value="US" />
-                            <select name="state" class="states order-alpha" id="stateId">
-                                <option value="">Select State</option>
-                            </select>
-                            <select name="city" class="cities order-alpha" id="cityId">
-                                <option value="">Select City</option>
-                            </select>
-                        </div>
+            <div class="form-group">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCity">City</label>
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputState">State</label>
+                        <select id="inputState" class="form-control">
+                          <option selected>Choose...</option>
+                          <option>New Jersey</option>
+                          <option>New York</option>
+                          <option>Pennsylvania</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="inputZip">Zip</label>
+                        <input type="text" class="form-control" id="inputZip">
+                    </div>
+                </div>
 
-
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label for="form_email">Address *</label>
-                                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter the address" required="required" data-error="Valid email is required.">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
+                <div class="form-group">
+                    <label for="inputAddress">Hours of Operation</label>
+                    <div class="form-group row">
+                        <div class="col-5">
+                            <input class="form-control" type="time" value="13:45:00" id="example-time-input">
                         </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label for="form_message">Message *</label>
-                                    <textarea id="form_message" name="message" class="form-control" placeholder="Type your message" rows="4" required="required" data-error="Please,leave us a message."></textarea>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <input type="submit" class="btn btn-success btn-send" value="Submit">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <p class="text-muted"><strong>*</strong> All fields are required. </p>
-                            </div>
+                        <p>to</p>
+                        <div class="col-6">
+                            <input class="form-control" type="time" value="13:45:00" id="example-time-input">
                         </div>
                     </div>
-            </form>
-            </div>
-        </div>
+
+
+
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">Walk-in</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                        <label class="form-check-label" for="inlineCheckbox2">Drive-thru</label>
+                    </div>
+                    <br/>
+                    <button type="submit" class="btn submit">Submit</button>
+        </form>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
