Removed AOS wrapper on modals. Also the submit route doesn't work once we are on nj page. Need to edit the form still and use the NJ test location date to convert to table

--- a/public/home.html
+++ b/public/home.html
@@ -101,215 +101,213 @@
     </div>
 
     <div class="container fightCovid">
-        <div class="box b" data-aos="zoom-in">
+        <div class="box a" data-aos="fade-up">
             <h2>What you can do to help slow COVID-19</h2>
         </div>
-        <div class="box b" data-aos="zoom-in">
-            <div class="row">
 
-                <!-- Grid column -->
-                <div class="col-lg-4 col-md-12 mb-4">
 
-                    <!--Modal: Name-->
-                    <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
+        <div class="row">
 
-                            <!--Content-->
-                            <div class="modal-content">
+            <!-- Grid column -->
+            <div class="col-lg-4 col-md-12 mb-4">
 
-                                <!--Body-->
-                                <div class="modal-body mb-0 p-0">
+                <!--Modal: Name-->
+                <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
 
-                                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/m7KxHDDgeA4" allowfullscreen></iframe>
-                                    </div>
+                        <!--Content-->
+                        <div class="modal-content">
 
+                            <!--Body-->
+                            <div class="modal-body mb-0 p-0">
+
+                                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/m7KxHDDgeA4" allowfullscreen></iframe>
                                 </div>
 
                             </div>
-                            <!--/.Content-->
 
                         </div>
+                        <!--/.Content-->
+
                     </div>
-                    <!--Modal: Name-->
-
-                    <a><img class="img-fluid z-depth-1" src="washHands.jpg" alt="video" data-toggle="modal" data-target="#modal1"></a>
-
                 </div>
-                <!-- Grid column -->
+                <!--Modal: Name-->
 
-                <!-- Grid column -->
-                <div class="col-lg-4 col-md-6 mb-4">
-
-                    <!--Modal: Name-->
-                    <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
-
-                            <!--Content-->
-                            <div class="modal-content">
-
-                                <!--Body-->
-                                <div class="modal-body mb-0 p-0">
-
-                                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sLXzw6j9JVw" allowfullscreen></iframe>
-                                    </div>
-
-                                </div>
-
-                            </div>
-                            <!--/.Content-->
-
-                        </div>
-                    </div>
-                    <!--Modal: Name-->
-
-                    <a><img class="img-fluid z-depth-1" src="sneeze.jpg" alt="video" data-toggle="modal" data-target="#modal6"></a>
-
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-lg-4 col-md-6 mb-4">
-
-                    <!--Modal: Name-->
-                    <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
-
-                            <!--Content-->
-                            <div class="modal-content">
-
-                                <!--Body-->
-                                <div class="modal-body mb-0 p-0">
-
-                                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2xLjCfmx0iE" allowfullscreen></iframe>
-                                    </div>
-
-                                </div>
-
-
-
-                            </div>
-                            <!--/.Content-->
-
-                        </div>
-                    </div>
-                    <!--Modal: Name-->
-
-                    <a><img class="img-fluid z-depth-1" src="mask.jpg" alt="video" data-toggle="modal" data-target="#modal4"></a>
-
-                </div>
-                <!-- Grid column -->
+                <a><img class="img-fluid z-depth-1" src="washHands.jpg" alt="video" data-toggle="modal" data-target="#modal1"></a>
 
             </div>
-            <!-- Grid row -->
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-lg-4 col-md-6 mb-4">
+
+                <!--Modal: Name-->
+                <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+
+                        <!--Content-->
+                        <div class="modal-content">
+
+                            <!--Body-->
+                            <div class="modal-body mb-0 p-0">
+
+                                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sLXzw6j9JVw" allowfullscreen></iframe>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <!--/.Content-->
+
+                    </div>
+                </div>
+                <!--Modal: Name-->
+
+                <a><img class="img-fluid z-depth-1" src="sneeze.jpg" alt="video" data-toggle="modal" data-target="#modal6"></a>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-lg-4 col-md-6 mb-4">
+
+                <!--Modal: Name-->
+                <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+
+                        <!--Content-->
+                        <div class="modal-content">
+
+                            <!--Body-->
+                            <div class="modal-body mb-0 p-0">
+
+                                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2xLjCfmx0iE" allowfullscreen></iframe>
+                                </div>
+
+                            </div>
+
+
+
+                        </div>
+                        <!--/.Content-->
+
+                    </div>
+                </div>
+                <!--Modal: Name-->
+
+                <a><img class="img-fluid z-depth-1" src="mask.jpg" alt="video" data-toggle="modal" data-target="#modal4"></a>
+
+            </div>
+            <!-- Grid column -->
+
         </div>
         <!-- Grid row -->
 
-        <div class="box b" data-aos="zoom-in">
-            <div class="row">
+        <div class="row">
 
-                <!-- Grid column -->
-                <div class="col-lg-4 col-md-12 mb-4">
+            <!-- Grid column -->
+            <div class="col-lg-4 col-md-12 mb-4">
 
-                    <!--Modal: Name-->
-                    <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
+                <!--Modal: Name-->
+                <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
 
-                            <!--Content-->
-                            <div class="modal-content">
+                        <!--Content-->
+                        <div class="modal-content">
 
-                                <!--Body-->
-                                <div class="modal-body mb-0 p-0">
+                            <!--Body-->
+                            <div class="modal-body mb-0 p-0">
 
-                                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8x20vBOkGNY" allowfullscreen></iframe>
-                                    </div>
-
+                                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8x20vBOkGNY" allowfullscreen></iframe>
                                 </div>
 
-
                             </div>
-                            <!--/.Content-->
+
 
                         </div>
+                        <!--/.Content-->
+
                     </div>
-                    <!--Modal: Name-->
-
-                    <a><img class="img-fluid z-depth-1" src="socialDistance.jpg" alt="video" data-toggle="modal" data-target="#modal2"></a>
-
                 </div>
-                <!-- Grid column -->
+                <!--Modal: Name-->
 
-                <!-- Grid column -->
-                <div class="col-lg-4 col-md-6 mb-4">
-
-                    <!--Modal: Name-->
-                    <div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
-
-                            <!--Content-->
-                            <div class="modal-content">
-
-                                <!--Body-->
-                                <div class="modal-body mb-0 p-0">
-
-                                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/A2xeSvamn1E" allowfullscreen></iframe>
-                                    </div>
-
-                                </div>
-
-
-
-                            </div>
-                            <!--/.Content-->
-
-                        </div>
-                    </div>
-                    <!--Modal: Name-->
-
-                    <a><img class="img-fluid z-depth-1" src="stayHome.jpeg" alt="video" data-toggle="modal" data-target="#modal5"></a>
-
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-lg-4 col-md-6 mb-4">
-
-                    <!--Modal: Name-->
-                    <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document">
-
-                            <!--Content-->
-                            <div class="modal-content">
-
-                                <!--Body-->
-                                <div class="modal-body mb-0 p-0">
-
-                                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FqkB7jw99rQ" allowfullscreen></iframe>
-                                    </div>
-
-                                </div>
-
-
-                            </div>
-                            <!--/.Content-->
-
-                        </div>
-                    </div>
-                    <!--Modal: Name-->
-
-                    <a><img class="img-fluid z-depth-1" src="vitamins.jpeg" alt="video" data-toggle="modal" data-target="#modal3"></a>
-
-                </div>
-                <!-- Grid column -->
+                <a><img class="img-fluid z-depth-1" src="socialDistance.jpg" alt="video" data-toggle="modal" data-target="#modal2"></a>
 
             </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-lg-4 col-md-6 mb-4">
+
+                <!--Modal: Name-->
+                <div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+
+                        <!--Content-->
+                        <div class="modal-content">
+
+                            <!--Body-->
+                            <div class="modal-body mb-0 p-0">
+
+                                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/A2xeSvamn1E" allowfullscreen></iframe>
+                                </div>
+
+                            </div>
+
+
+
+                        </div>
+                        <!--/.Content-->
+
+                    </div>
+                </div>
+                <!--Modal: Name-->
+
+                <a><img class="img-fluid z-depth-1" src="stayHome.jpeg" alt="video" data-toggle="modal" data-target="#modal5"></a>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-lg-4 col-md-6 mb-4">
+
+                <!--Modal: Name-->
+                <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+
+                        <!--Content-->
+                        <div class="modal-content">
+
+                            <!--Body-->
+                            <div class="modal-body mb-0 p-0">
+
+                                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FqkB7jw99rQ" allowfullscreen></iframe>
+                                </div>
+
+                            </div>
+
+
+                        </div>
+                        <!--/.Content-->
+
+                    </div>
+                </div>
+                <!--Modal: Name-->
+
+                <a><img class="img-fluid z-depth-1" src="vitamins.jpeg" alt="video" data-toggle="modal" data-target="#modal3"></a>
+
+            </div>
+            <!-- Grid column -->
+
         </div>
     </div>
+
 
     <div class="container-fluid stripe">
     </div>
