Added NJ Sites Table

--- a/public/nj.html
+++ b/public/nj.html
@@ -52,7 +52,11 @@
             <table class="table table-bordered table-striped" id="testLocationTable">
                 <tr>
                     <th> Name</th>
+                    <th>Address</th>
+                    <th>City</th>
                     <th>State</th>
+                    <th>Phone Number</th>
+                    <th>Qualifications</th>
                 </tr>
             </table>
         </div>
