Added AJAX post in submissions.js

--- a/public/submissions.html
+++ b/public/submissions.html
@@ -44,7 +44,7 @@
 
     </nav>
 
-    <div class="container submissionForm form-horizontal" role="form" method="post" id="myForm">
+    <div class="container submissionForm form-horizontal" role="form" id="myForm">
         <h1 class="mb-5">Submit a Testing Site</h1>
         <form>
             <div class="form-row">
@@ -115,7 +115,7 @@
 
                 <br/>
 
-                <button type="submit" class="btn submit" name="submit" value="Submit Form">Submit</button>
+                <button type="submit" class="btn submit" name="submit" value="Submit Form" onclick="submitRequest()">Submit</button>
 
         </form>
 
