--- a/public/submissions.html
+++ b/public/submissions.html
@@ -50,24 +50,24 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label>Location Name</label>
-                    <input class="form-control" placeholder="Please enter the name of the testing facility" name="name">
+                    <input class="form-control" placeholder="Please enter the name of the testing facility" id="name">
                 </div>
 
                 <div class="form-group col-md-6">
                     <label for="example-tel-input">Telephone</label>
-                    <input class="form-control" type="tel" value="1-(555)-555-5555" id="example-tel-input" name="phone">
+                    <input class="form-control" type="tel" value="1-(555)-555-5555" id="phone">
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="inputAddress">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="address">
+                <input type="text" class="form-control" placeholder="1234 Main St" id="address">
             </div>
 
             <div>
                 <label for="inputState">State</label>
                 <br/>
-                <select id="source" name="source">
+                <select class="source" id="state">
                             <option>New Jersey</option>
                             <option>New York</option>
                             <option>Pennsylvania</option>
@@ -75,7 +75,7 @@
                 <br/>
                 <label for="inputCity">City</label>
                 <br/>
-                <select id="status" name="status">
+                <select class="status" id="city">
                     <option></option>
                                    
                         </select>
@@ -86,11 +86,11 @@
                 <label for="inputAddress">Hours of Operation</label>
                 <div class="form-group row">
                     <div class="col-5">
-                        <input class="form-control" type="time" value="13:45:00" id="example-time-input" name="open">
+                        <input class="form-control" type="time" value="13:45:00" id="open">
                     </div>
                     <p>to</p>
                     <div class="col-6">
-                        <input class="form-control" type="time" value="13:45:00" id="example-time-input" name="close">
+                        <input class="form-control" type="time" value="13:45:00" id="example-time-input" id="close">
                     </div>
                 </div>
 
@@ -101,21 +101,21 @@
 
 
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" name="walkin">
+                    <input class="form-check-input" type="checkbox" value="option1" id="walkin">
                     <label class="form-check-label" for="inlineCheckbox1">Walk-in</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" name="drivethru">
+                    <input class="form-check-input" type="checkbox" value="option2" id="drivethru">
                     <label class="form-check-label" for="inlineCheckbox2">Drive-thru</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" name="hospital">
+                    <input class="form-check-input" type="checkbox" value="option3" id="hospital">
                     <label class="form-check-label" for="inlineCheckbox2">Hospital</label>
                 </div>
 
                 <br/>
 
-                <button type="submit" class="btn submit" name="submit" value="Submit Form" onclick="submitRequest()">Submit</button>
+                <button type="submit" class="btn submit" name="submit" value="Submit Form" onclick="submitRequest();">Submit</button>
 
         </form>
 
