--- a/public/submissions.html
+++ b/public/submissions.html
@@ -67,7 +67,7 @@
             <div>
                 <label for="inputState">State</label>
                 <br/>
-                <select class="source" id="state">
+                <select class="source" id="state" placeholder="Select state">
                             <option>New Jersey</option>
                             <option>New York</option>
                             <option>Pennsylvania</option>
@@ -90,7 +90,7 @@
                     </div>
                     <p>to</p>
                     <div class="col-6">
-                        <input class="form-control" type="time" value="13:45:00" id="example-time-input" id="close">
+                        <input class="form-control" type="time" value="13:45:00" id="close">
                     </div>
                 </div>
 
