--- a/public/submissions.html
+++ b/public/submissions.html
@@ -101,15 +101,15 @@
 
 
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" value="option1" id="walkin">
+                    <input class="form-check-input" type="checkbox" value="1" id="walkin">
                     <label class="form-check-label" for="inlineCheckbox1">Walk-in</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" value="option2" id="drivethru">
+                    <input class="form-check-input" type="checkbox" value="1" id="drivethru">
                     <label class="form-check-label" for="inlineCheckbox2">Drive-thru</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" value="option3" id="hospital">
+                    <input class="form-check-input" type="checkbox" value="1" id="hospital">
                     <label class="form-check-label" for="inlineCheckbox2">Hospital</label>
                 </div>
 
