Remove NJ as default

--- a/public/submissions.html
+++ b/public/submissions.html
@@ -68,6 +68,7 @@
                 <label for="inputState">State</label>
                 <br/>
                 <select class="source" id="state" placeholder="Select state">
+                    <option></option>
                             <option>New Jersey</option>
                             <option>New York</option>
                             <option>Pennsylvania</option>
